# crcl

./: .env  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/entities/: login_oauth_info.rs  logins.rs  media.rs  mod.rs  posts.rs  prelude.rs  scopes.rs  user_scopes.rs  users.rs
migration/src/: m20220101_000001_create_table.rs
src/: main.rs  router.rs  templating.rs
src/config/: db.rs  mod.rs  shutdown.rs  traces.rs
src/controllers/: auth.rs  greet.rs  index.rs  mod.rs  user.rs
templates/: _layout.html  index.html
templates/auth/: login.html
