[package]
name = "crcl"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

askama = "^0.12"
axum = "^0.6"
dotenvy = "^0.15"
rand = "^0.8"
sea-orm = { version = "^0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "^1.32", features = ["full"] }
tower-http = { version = "^0.4", features = ["fs", "trace"] }
tracing = { version = "^0.1", features = ["log"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
